--- a/cfg/rpg_perks.cfg
+++ b/cfg/rpg_perks.cfg
@@ -111,3 +111,8 @@ perk_gardener_xp_boost4 "7500"
 // -
 // Default: "3000"
 perk_drug_seed_boost "3000"
+
+// Price of the Drug Harvest boost 1
+// -
+// Default: "4500"
+perk_drug_harvest_boost1 "4500"
